force-app/main/default/objects/Treatment_Plan__c/Treatment_Plan__c.object-meta.xml
<CustomObject>
    <label>Treatment Plan</label>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>Treatment Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>