force-app/main/default/objects/Treatment_Plan__c/fields/AssignedTreatmentBundleId__c.field-meta.xml
<CustomField>
    <fullName>AssignedTreatmentBundleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Treatment Bundle</label>
    <referenceTo>Treatment_Bundle__c</referenceTo>
    <relationshipLabel>Treatment Plans (Assigned Treatment Bundle)</relationshipLabel>
    <relationshipName>Assigned_Treatment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>