force-app/main/default/objects/Treatment_Plan__c/fields/Custom_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Custom_Schedule__c</fullName>
    <inlineHelpText>If left blank, will use default schedule.</inlineHelpText>
    <label>Custom Schedule</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scheduling_Days</valueSetName>
    </valueSet>
</CustomField>