force-app/main/default/objects/Treatment_Plan__c/fields/Enrichment_Activities__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Activities__c</fullName>
    <label>Enrichment Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Enrichment_Activities</valueSetName>
    </valueSet>
</CustomField>