force-app/main/default/objects/Treatment_Plan__c/fields/Enrichment_Priority__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Priority__c</fullName>
    <label>Enrichment Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily – 7 days</fullName>
            </value>
            <value>
                <fullName>High – 5 days</fullName>
            </value>
            <value>
                <fullName>Low – 3 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>