force-app/main/default/objects/Treatment_Plan__c/fields/Last_Treatment_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Treatment_Session__c</fullName>
    <label>Last Treatment Session</label>
    <summarizedField>Treatment_Session__c.Session_Date__c</summarizedField>
    <summaryForeignKey>Treatment_Session__c.Treatment_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>