force-app/main/default/objects/Treatment_Plan__c/fields/Num_of_Treatment_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Treatment_Sessions__c</fullName>
    <label># of Treatment Sessions</label>
    <summaryForeignKey>Treatment_Session__c.Treatment_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>