force-app/main/default/objects/Treatment_Plan__c/fields/Preferred_Motivators__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Motivators__c</fullName>
    <label>Preferred Motivators</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>