force-app/main/default/objects/Treatment_Plan__c/fields/Problem_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Problem_Behavior__c</fullName>
    <label>Problem Behavior (see TEC)</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fear of People - Mild</fullName>
            </value>
            <value>
                <fullName>Fear of People - Moderate</fullName>
            </value>
            <value>
                <fullName>Fear of People - Severe</fullName>
            </value>
            <value>
                <fullName>Fear of Handling - Mild</fullName>
            </value>
            <value>
                <fullName>Fear of Handling - Moderate</fullName>
            </value>
            <value>
                <fullName>Fear of Handling - Severe</fullName>
            </value>
            <value>
                <fullName>Fear of Leashing, Leash Pressure, Walking on Leash - Mild</fullName>
            </value>
            <value>
                <fullName>Fear of Leashing, Leash Pressure, Walking on Leash - Moderate</fullName>
            </value>
            <value>
                <fullName>Fear of Leashing, Leash Pressure, Walking on Leash - Severe</fullName>
            </value>
            <value>
                <fullName>Fear of Places, Objects, Novelty - Mild</fullName>
            </value>
            <value>
                <fullName>Fear of Places, Objects, Novelty - Moderate</fullName>
            </value>
            <value>
                <fullName>Fear of Places, Objects, Novelty - Severe</fullName>
            </value>
            <value>
                <fullName>Fear of Noises - Mild</fullName>
            </value>
            <value>
                <fullName>Fear of Noises - Moderate</fullName>
            </value>
            <value>
                <fullName>Fear of Noises - Severe</fullName>
            </value>
            <value>
                <fullName>Fear of Dogs - Mild</fullName>
            </value>
            <value>
                <fullName>Fear of Dogs - Moderate</fullName>
            </value>
            <value>
                <fullName>Fear of Dogs - Severe</fullName>
            </value>
            <value>
                <fullName>Reactivity Toward People/Dogs (Specific to Kennel) - Mild</fullName>
            </value>
            <value>
                <fullName>Reactivity Toward People/Dogs (Specific to Kennel) - Moderate</fullName>
            </value>
            <value>
                <fullName>Reactivity Toward People/Dogs (Specific to Kennel) - Severe</fullName>
            </value>
            <value>
                <fullName>Arousal in Kennel/Shelter Stress - Mild</fullName>
            </value>
            <value>
                <fullName>Arousal in Kennel/Shelter Stress - Moderate</fullName>
            </value>
            <value>
                <fullName>Arousal in Kennel/Shelter Stress - Severe</fullName>
            </value>
            <value>
                <fullName>Arousal Out of Kennel/Jumping &amp; Mouthing - Mild</fullName>
            </value>
            <value>
                <fullName>Arousal Out of Kennel/Jumping &amp; Mouthing - Moderate</fullName>
            </value>
            <value>
                <fullName>Arousal Out of Kennel/Jumping &amp; Mouthing - Severe</fullName>
            </value>
            <value>
                <fullName>Reactivity on Leash (People) - Mild</fullName>
            </value>
            <value>
                <fullName>Reactivity on Leash (People) - Moderate</fullName>
            </value>
            <value>
                <fullName>Reactivity on Leash (People) - Severe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>