force-app/main/default/objects/Treatment_Plan__c/fields/Problem_Behavior_Aggression__c.field-meta.xml
<CustomField>
    <fullName>Problem_Behavior_Aggression__c</fullName>
    <label>Problem Behavior - Aggression</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggression Toward People – Defensive - Low Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward People – Defensive - Medium Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward People – Defensive - High/Extreme Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward People – Offensive - Low Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward People – Offensive - Medium Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward People – Offensive - High/Extreme Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward Unfamiliar People - Low Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward Unfamiliar People - Medium Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward Unfamiliar People - High/Extreme Risk</fullName>
            </value>
            <value>
                <fullName>Aggression toward Children - Low Risk</fullName>
            </value>
            <value>
                <fullName>Aggression toward Children - Medium Risk</fullName>
            </value>
            <value>
                <fullName>Aggression toward Children - High/Extreme Risk</fullName>
            </value>
            <value>
                <fullName>Aggression toward Elderly, Disabled People - Low Risk</fullName>
            </value>
            <value>
                <fullName>Aggression toward Elderly, Disabled People - Medium Risk</fullName>
            </value>
            <value>
                <fullName>Aggression toward Elderly, Disabled People - High/Extreme Risk</fullName>
            </value>
            <value>
                <fullName>Aggression When Handled - Low Risk</fullName>
            </value>
            <value>
                <fullName>Aggression When Handled - Medium Risk</fullName>
            </value>
            <value>
                <fullName>Aggression When Handled - High/Extreme Risk</fullName>
            </value>
            <value>
                <fullName>Redirected Aggression toward People - Low Risk</fullName>
            </value>
            <value>
                <fullName>Redirected Aggression toward People - Medium Risk</fullName>
            </value>
            <value>
                <fullName>Redirected Aggression toward People - High/Extreme Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward Dogs – Defensive - Low Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward Dogs – Defensive - Medium Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward Dogs – Defensive - High/Extreme Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward Dogs – Offensive - Low Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward Dogs – Offensive - Medium Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward Dogs – Offensive - High/Extreme Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward Unfamiliar Dogs - Low Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward Unfamiliar Dogs - Medium Risk</fullName>
            </value>
            <value>
                <fullName>Aggression Toward Unfamiliar Dogs - High/Extreme Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>