force-app/main/default/objects/Treatment_Plan__c/fields/Problem_Behavior_Arousal__c.field-meta.xml
<CustomField>
    <fullName>Problem_Behavior_Arousal__c</fullName>
    <label>Problem Behavior - Arousal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reactivity Toward People/Dogs (Specific to Kennel) - Mild</fullName>
            </value>
            <value>
                <fullName>Reactivity Toward People/Dogs (Specific to Kennel) - Moderate</fullName>
            </value>
            <value>
                <fullName>Reactivity Toward People/Dogs (Specific to Kennel) - Severe</fullName>
            </value>
            <value>
                <fullName>Arousal in Kennel/Shelter Stress - Mild</fullName>
            </value>
            <value>
                <fullName>Arousal in Kennel/Shelter Stress - Moderate</fullName>
            </value>
            <value>
                <fullName>Arousal in Kennel/Shelter Stress - Severe</fullName>
            </value>
            <value>
                <fullName>Arousal Out of Kennel/Jumping &amp; Mouthing - Mild</fullName>
            </value>
            <value>
                <fullName>Arousal Out of Kennel/Jumping &amp; Mouthing - Moderate</fullName>
            </value>
            <value>
                <fullName>Arousal Out of Kennel/Jumping &amp; Mouthing - Severe</fullName>
            </value>
            <value>
                <fullName>Reactivity on Leash (People) - Mild</fullName>
            </value>
            <value>
                <fullName>Reactivity on Leash (People) - Moderate</fullName>
            </value>
            <value>
                <fullName>Reactivity on Leash (People) - Severe</fullName>
            </value>
            <value>
                <fullName>Reactivity on Leash (Dogs/Moving Things) - Mild</fullName>
            </value>
            <value>
                <fullName>Reactivity on Leash (Dogs/Moving Things) - Moderate</fullName>
            </value>
            <value>
                <fullName>Reactivity on Leash (Dogs/Moving Things) - Severe</fullName>
            </value>
            <value>
                <fullName>Arousal during Play with Dogs - Mild</fullName>
            </value>
            <value>
                <fullName>Arousal during Play with Dogs - Moderate</fullName>
            </value>
            <value>
                <fullName>Arousal during Play with Dogs - Severe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>