force-app/main/default/objects/Treatment_Plan__c/fields/Problem_Behavior_Count__c.field-meta.xml
<CustomField>
    <fullName>Problem_Behavior_Count__c</fullName>
    <formula>Problem_Behavior_Aggression_Count__c +  Problem_Behavior_Arousal_Count__c +  Problem_Behavior_Fear_Count__c +  Problem_Behavior_Miscellaneous_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Problem Behavior Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>