force-app/main/default/objects/Treatment_Plan__c/fields/Problem_Behavior_Fear__c.field-meta.xml
<CustomField>
    <fullName>Problem_Behavior_Fear__c</fullName>
    <label>Problem Behavior - Fear</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fear of People - Mild</fullName>
            </value>
            <value>
                <fullName>Fear of People - Moderate</fullName>
            </value>
            <value>
                <fullName>Fear of People - Severe</fullName>
            </value>
            <value>
                <fullName>Fear of Handling - Mild</fullName>
            </value>
            <value>
                <fullName>Fear of Handling - Moderate</fullName>
            </value>
            <value>
                <fullName>Fear of Handling - Severe</fullName>
            </value>
            <value>
                <fullName>Fear of Leashing, Leash Pressure, Walking on Leash - Mild</fullName>
            </value>
            <value>
                <fullName>Fear of Leashing, Leash Pressure, Walking on Leash - Moderate</fullName>
            </value>
            <value>
                <fullName>Fear of Leashing, Leash Pressure, Walking on Leash - Severe</fullName>
            </value>
            <value>
                <fullName>Fear of Places, Objects, Novelty - Mild</fullName>
            </value>
            <value>
                <fullName>Fear of Places, Objects, Novelty - Moderate</fullName>
            </value>
            <value>
                <fullName>Fear of Places, Objects, Novelty - Severe</fullName>
            </value>
            <value>
                <fullName>Fear of Noises - Mild</fullName>
            </value>
            <value>
                <fullName>Fear of Noises - Moderate</fullName>
            </value>
            <value>
                <fullName>Fear of Noises - Severe</fullName>
            </value>
            <value>
                <fullName>Fear of Dogs - Mild</fullName>
            </value>
            <value>
                <fullName>Fear of Dogs - Moderate</fullName>
            </value>
            <value>
                <fullName>Fear of Dogs - Severe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>