force-app/main/default/objects/Treatment_Plan__c/fields/Problem_Behavior_Miscellaneous__c.field-meta.xml
<CustomField>
    <fullName>Problem_Behavior_Miscellaneous__c</fullName>
    <label>Problem Behavior - Miscellaneous</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuisance Barking - Mild</fullName>
            </value>
            <value>
                <fullName>Nuisance Barking - Moderate</fullName>
            </value>
            <value>
                <fullName>Nuisance Barking - Severe</fullName>
            </value>
            <value>
                <fullName>Separation Anxiety - Mild</fullName>
            </value>
            <value>
                <fullName>Separation Anxiety - Moderate</fullName>
            </value>
            <value>
                <fullName>Separation Anxiety - Severe</fullName>
            </value>
            <value>
                <fullName>House Soiling - Mild</fullName>
            </value>
            <value>
                <fullName>House Soiling - Moderate</fullName>
            </value>
            <value>
                <fullName>House Soiling - Severe</fullName>
            </value>
            <value>
                <fullName>Repetitive Behavior - Mild</fullName>
            </value>
            <value>
                <fullName>Repetitive Behavior - Moderate</fullName>
            </value>
            <value>
                <fullName>Repetitive Behavior - Severe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>