force-app/main/default/objects/Treatment_Plan__c/fields/Problem_Behavior_Miscellaneous_Count__c.field-meta.xml
<CustomField>
    <fullName>Problem_Behavior_Miscellaneous_Count__c</fullName>
    <label>Problem Behavior - Miscellaneous Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>