force-app/main/default/objects/Treatment_Plan__c/fields/Treatment_Priority__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Priority__c</fullName>
    <label>Treatment Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Treatment</fullName>
                <default>true</default>
                <label>No Treatment</label>
            </value>
            <value>
                <fullName>Daily – 7 days</fullName>
            </value>
            <value>
                <fullName>High – 5 days</fullName>
            </value>
            <value>
                <fullName>Medium – 4 days</fullName>
            </value>
            <value>
                <fullName>Low – 3 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>