force-app/main/default/objects/Treatment_Plan__c/fields/TreatmentBundleId__c.field-meta.xml
<CustomField>
    <fullName>TreatmentBundleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Bundle</label>
    <referenceTo>Treatment_Bundle__c</referenceTo>
    <relationshipLabel>Treatment Plans</relationshipLabel>
    <relationshipName>Treatment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>