force-app/main/default/objects/Treatment_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Animal__c</columns>
    <columns>AssignedTreatmentBundleId__c</columns>
    <columns>Enrichment_Activities__c</columns>
    <columns>Preferred_Motivators__c</columns>
    <columns>All_Problem_Behaviors__c</columns>
    <columns>Problem_Behavior_Aggression__c</columns>
    <columns>Problem_Behavior_Arousal__c</columns>
    <columns>Problem_Behavior_Fear__c</columns>
    <columns>Problem_Behavior_Miscellaneous__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>