force-app/main/default/objects/Treatment_Plan__c/listViews/Enrichment_Activities.listView-meta.xml
<ListView>
    <fullName>Enrichment_Activities</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Enrichment_Priority__c</columns>
    <columns>Enrichment_Activities__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Enrichment Activities</label>
</ListView>